--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </dd>
   </dl>
   </p>
-  <object type = "image/svg+xml" data = "Files for Linkages/1430574129.svg"> </object>
+  <object type = "image/svg+xml" data = "https://raw.githubusercontent.com/IanPauloGonzales/Gonzales_Linkagess/c8e3ecc25ea14ee9193cd154d658dd74100eb4d9/Files%20for%20Linkages/1430574129.svg"> </object>
   
    <img src="Files for Linkages/1430574129.svg">
   <br /><a href="#startA"> click here to go to the top of this page </a> <br /><
